@@ -123,7 +123,8 @@ public:
 	enum {
 		RESOURCESTATE_IGNORE = 0,
 		RESOURCESTATE_PERCENT = 1,
-		RESOURCESTATE_NOT_PERCENT = 2
+		RESOURCESTATE_NOT_PERCENT = 2,
+		RESOURCESTATE_PERCENT_EXACT = 3
 	};
 
 	enum {
